kubernetes/istio/04-security/demos/demo3/productpage-authn-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: productpage-authn
  namespace: default
spec:
  selector:
    matchLabels:
      app: productpage        
  jwtRules:
    - issuer: "testing@secure.istio.io"
      jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.4/security/tools/jwt/samples/jwks.json"
