kubernetes/istio/04-security/demos/demo3/productpage-authz-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: productpage-authz
  namespace: default
spec:  
  selector:
    matchLabels:
      app: productpage
